src/default-modules/ui/controls/volume/volume.scss
@import '../../shared';


$color: white !default;

.volume-control {
  position: relative;

  display: flex;
  overflow: hidden;

  width: 25px;
  max-width: 25px;
  height: 25px;
  margin-right: 5px;
  margin-left: 5px;

  justify-content: center;
  align-items: center;
  @include in-full-screen() {
    width: 35px;
    max-width: 35px;
    height: 35px;
    margin-right: 20px;
  }
  @include max-width-300() {
    @include hidden();
  }

  &:hover,
  &:focus,
  .focus-withing {
    .container {
      opacity: 1;
    }
  }
}

.mute-button {
  width: 25px;
  min-width: 25px;
  height: 25px;
  min-height: 25px;

  background-image: url('../../../../assets/volume-100.svg');
  background-repeat: no-repeat;
  background-position: center;
  background-size: 17px 14px;

  @include in-full-screen() {
    width: 35px;
    min-width: 35px;
    height: 35px;
    min-height: 35px;

    background-size: 25px 21px;
  }

  &.half-volume {
    background-image: url('../../../../assets/volume-50.svg');
  }

  &.muted {
    background-image: url('../../../../assets/volume-0.svg');
  }
}

.container {
  font-size: 10px;

  position: absolute;
  top: -82px;
  left: 0;

  padding: 9px 3px;

  transition: .2s opacity, .2s visibility;

  opacity: 0;
  background-color: rgba(0,0,0, .5);

  @include in-full-screen() {
    top: -122px;
  }
}

.content {
  position: relative;

  box-sizing: content-box;
  width: 2px;
  height: 60px;
  padding: 2px 7px;

  @include in-full-screen() {
    width: 2px;
    height: 100px;
    padding: 2px 12px;
  }
}

.input-wrapper {
  position: relative;

  width: 100%;
  height: 100%;

  background-color: rgba(255, 255, 255, .5);
}

.filled-progress {
  position: absolute;
  bottom: 0;
  left: 0;

  width: 100%;

  background-color: $color;

  &:before {
    position: absolute;
    top: -4px;
    right: -4px;

    width: 10px;
    height: 10px;

    content: '';

    border-radius: 50%;
    background-color: #fff;
  }
}

.volume-input {
  position: absolute;
  top: 0;
  right: -5px;
  bottom: 0;
  left: -5px;

  width: 12px;
  height: 100%;
  margin: 0;
  padding: 0;

  cursor: pointer;
  -ms-writing-mode: bt-lr;

  opacity: 0;
  border: 0;

      writing-mode: bt-lr;
  -webkit-appearance: slider-vertical;
}

:global {
  [data-focus-source='key'] [data-hook='volume-control'] [data-hook='input-container'].focus-within,
  [data-focus-source='script'] [data-hook='volume-control'] [data-hook='input-container'].focus-within {
    opacity: 1;
    outline: 2px solid rgba(56, 153, 236, .8);
  }

  [data-hook='volume-control'].focus-within,
  [data-hook='volume-control']:hover {
    overflow: visible;
  }
}

